crates/analyzer/tests/snapshots/errors__invalid_chain_field.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: Not a chain field
  ┌─ compile_errors/invalid_chain_field.fe:4:11
  │
4 │     chain.foo
  │           ^^^
  │
  = Note: Only `id` can be accessed on `chain`.


